--- a/cow.html
+++ b/cow.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Animal Farm</title>
+    <title>Cow Chat</title>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="main.css" />
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-
   </head>
   <body>
   	<div class="container-fluid">
@@ -19,8 +17,3 @@
 	
   </body>
 </html>
-
-
-  
-
-
