--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
   <head>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Animal Farm</title>
+    <title>Cow Chat</title>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="main.css" />
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Animal Farm</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#"><a class="icon-button cow"><i class="icon-cow"></i><span></span></a></a></li>
+      <li><a href="#"><a class="icon-button chicken"><i class="icon-chicken"></i><span></span></a></a></li> 
+      <li><a href="#"><a class="icon-button horse"><i class="icon-horse"></i><span></span></a></a></li> 
+    </ul>
+  </div>
+</nav>
   	<div class="container-fluid">
-  <h1>Animal Farm</h1>
-  
-</div>
+   </div>
 	
   </body>
 </html>
-
 
   
 
