--- a/cow.html
+++ b/cow.html
@@ -10,6 +10,12 @@
   <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="main.js"></script>
+    <div id="messages"></div>
+    <input type="text" id="nameInput" placeholder="Name">
+<input type="text" id="messageInput" placeholder="Message">
   	<div class="container-fluid">
   <h1>Animal Farm</h1>
   
