--- a/cow.html
+++ b/cow.html
@@ -10,21 +10,21 @@
   <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Animal Farm</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li> 
-      <li><a href="#">Page 3</a></li> 
+      <li><a href="about.html">About</a></li>
+      <li><a href="cow.html">Cow</a></li> 
+      <li><a href="chicken.html">Chicken</a></li> 
     </ul>
   </div>
 </nav>
-  	<div class="container-fluid">
+    <div class="container-fluid">
    </div>
-	
+  
   </body>
 </html>
