--- a/cow.html
+++ b/cow.html
@@ -16,9 +16,9 @@
       <a class="navbar-brand" href="#">Animal Farm</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="cow.html">Cow</a></li> 
+      <li  class="active"><a href="cow.html">Cow</a></li> 
       <li><a href="chicken.html">Chicken</a></li> 
     </ul>
   </div>
