--- a/cow.html
+++ b/cow.html
@@ -40,7 +40,7 @@
       <a class="navbar-brand" href="#">Animal Farm</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li  class="active"><a href="cow.html">Cow</a></li> 
       <li><a href="chicken.html">Chicken</a></li> 
