--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
-  <body>
+  <body> 
+
+  	<div class="container-fluid">
     <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Animal Farm</a>
+      <a class="navbar-brand" href="index.html"></a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
@@ -23,8 +25,11 @@
     </ul>
   </div>
 </nav>
-    <div class="container-fluid">
-   </div>
+   <div class="container">
+  <h2>Rounded Corners</h2>
+  <p>Welcome to Animal Fam, the place where animals will calm your worries.</p>
+  <img src="AnimalFarm.png" alt="Animal Fam" width="304" height="236">
+</div>
   
   </body>
 </html>
