--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="main.js"></script>
+  <link rel="stylesheet" type="text/css" href="main.css">
   </head>
-<<<<<<< HEAD
+
   <body> 
 
   	<div class="container-fluid">
@@ -32,15 +33,7 @@
   <img src="AnimalFarm.png" alt="Animal Fam" width="304" height="236">
 </div>
   
-=======
-  <body>
-  	<div class="container-fluid">
-  <h1>Animal Farm</h1>
-  <p>This part is inside a .container-fluid class.</p>
-  <p>The .container-fluid class provides a full width container, spanning the entire width of the viewport.</p>
 </div>
-	
->>>>>>> origin/master
   </body>
 </html>
 
