--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="main.js"></script>
   <link rel="stylesheet" type="text/css" href="main.css">
+ <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
   </head>
 
   <body> 
@@ -20,7 +21,7 @@
       <a class="navbar-brand" href="index.html"></a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Home</a></li>
+      <li class="active"><a href="index.html">Animal Fam</a></li>
       <li> <a href="about.html">About</a></li>
       <li><a href="cow.html">Cow</a></li> 
       <li><a href="chicken.html">Chicken</a></li> 
@@ -30,7 +31,7 @@
    <div class="container">
   <h2>Rounded Corners</h2>
   <p>Welcome to Animal Fam, the place where animals will calm your worries.</p>
-  <img src="AnimalFarm.png" alt="Animal Fam" width="304" height="236">
+  <img src="AnimalFarm.png" alt="Animal Fam">
 </div>
   
 </div>
