--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   	<div class="container-fluid">
     <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="index.html"></a>
-    </div>
+    
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Animal Fam</a></li>
       <li> <a href="about.html">About</a></li>
@@ -28,10 +26,10 @@
     </ul>
   </div>
 </nav>
-   <div class="container">
+   <div id = "intro" class="container">
   <h2>Rounded Corners</h2>
   <p>Welcome to Animal Fam, the place where animals will calm your worries.</p>
-  <img src="AnimalFarm.png" alt="Animal Fam">
+  <img src="transhome.png" alt="Animal Fam">
 </div>
   
 </div>
