--- a/chicken.html
+++ b/chicken.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Animal Farm</title>
+    <title>Chicken Chat</title>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,15 +14,15 @@
 
   <body> 
 
-    <div class="container-fluid">
+  	<div class="container-fluid">
     <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     
     <ul class="nav navbar-nav">
-      <li><a href="index.html">Animal Fam</a></li>
-      <li class="active"><a href="about.html">About</a></li>
+      <li ><a href="index.html">Animal Fam</a></li>
+      <li> <a href="about.html">About</a></li>
       <li><a href="cow.html">Cow</a></li> 
-      <li><a href="chicken.html">Chicken</a></li> 
+      <li class="active"><a href="chicken.html">Chicken</a></li> 
     </ul>
   </div>
 </nav>
