--- a/cow.html
+++ b/cow.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cow Chat</title>
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="main.css" />
-  </head>
-  <body>
-
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="main.js"></script>
-    <div id="messages"></div>
-    <input type="text" id="nameInput" placeholder="Name">
-    <input type="text" id="messageInput" placeholder="Message">
-
-
-  
-  </body>
+<html>
+    <head>
+        <title>Chat with Me!</title>
+    </head>
+    <body>
+        <div id="messages"></div>
+        <input type="text" id="nameInput" placeholder="Name">
+        <input type="text" id="messageInput" placeholder="Message">
+        
+        <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="main.js"></script>
+    </body>
 </html>
