bunch new stuff

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   </div>
 </nav>
    <div id = "intro" class="container">
-  <h2>Rounded Corners</h2>
+  <br>
   <p>Welcome to Animal Fam, the place where animals will calm your worries.</p>
-  <img src="transhome.png" alt="Animal Fam">
+  <img id = "homepic" src="transhome.png" alt="Animal Fam">
 </div>
   
 </div>
