--- a/chicken.html
+++ b/chicken.html
@@ -17,7 +17,6 @@
   	<div class="container-fluid">
     <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
-    
     <ul class="nav navbar-nav">
       <li ><a href="index.html">Animal Fam</a></li>
       <li> <a href="about.html">About</a></li>
@@ -26,10 +25,11 @@
     </ul>
   </div>
 </nav>
+   
    <div id = "intro" class="container">
-  <h2>Rounded Corners</h2>
-  <p>Welcome to Animal Fam, the place where animals will calm your worries.</p>
-  <img src="transhome.png" alt="Animal Fam">
+    <br>
+  <p>Who cares why I crossed the road?</p>
+  <img class = "fix" src="transhome.png" alt="Animal Fam">
 </div>
   
 </div>
