--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Animal Fam</a>
+      <a class="navbar-brand" href="index.html" id = "homebar">Animal Fam</a>
     </div>
 
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -41,7 +41,7 @@
    <div id = "intro" class="container">
   <br>
   <p>Welcome to Animal Fam, the place where animals will calm your worries.</p>
-  <img id = "homepic" src="transhome.png" alt="Animal Fam">
+  <img id = "homepic" src="tranfam.png" alt="Animal Fam">
 </div>
   
 </div>
