--- a/chicken.html
+++ b/chicken.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Animal Fam</a>
+      <a class="navbar-brand" href="index.html" id = "homebar">Animal Fam</a>
     </div>
 
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -40,10 +40,17 @@
 </nav>
    
    <div id = "intro" class="container">
-    <br>
   <p>Who cares why I crossed the road?</p>
   <img class = "fix" src="talkchicken.png" alt="Animal Fam">
 </div>
+
+<div class="container">
+  
+  <div class="panel panel-default">
+    <div class="panel-body">Chicken Chat</div>
+  </div>
+</div>
+
   
 </div>
   </body>
