--- a/horse.html
+++ b/horse.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Chicken Chat</title>
+    <title>Horse Chat</title>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -32,8 +32,9 @@
         
           <li><a href = "about.html">About</a></li> 
           <li><a href="cow.html">Cow Chat</a></li>
-          <li><a class = "active" href="chicken.html">Chicken Chat</a></li>
-          <li><a href="horse.html">Horse Chat</a></li>
+          <li><a href="chicken.html">Chicken Chat</a></li>
+          <li><a class = "active" href="horse.html">Horse</a></li>
+        
      </ul>
     </div>
   </div>
@@ -41,7 +42,7 @@
    
    <div id = "intro" class="container">
   <p>Who cares why I crossed the road?</p>
-  <img class = "fix" src="talkchicken.png" alt="Animal Fam">
+  <img class = "fix" src="talkhorse.png" alt="Animal Fam">
 </div>
 
 <div class="container">
@@ -55,8 +56,3 @@
 </div>
   </body>
 </html>
-
-
-  
-
-
