--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li><a href = "about.html">About</a></li> 
           <li><a href="cow.html">Cow Chat</a></li>
           <li><a href="chicken.html">Chicken Chat</a></li>
+          <li><a href="horse.html">Horse Chat</a></li>
         
      </ul>
     </div>
