--- a/horse.html
+++ b/horse.html
@@ -33,7 +33,7 @@
           <li><a href = "about.html">About</a></li> 
           <li><a href="cow.html">Cow Chat</a></li>
           <li><a href="chicken.html">Chicken Chat</a></li>
-          <li><a class = "active" href="horse.html">Horse</a></li>
+          <li><a class = "active" href="horse.html">Horse Chat</a></li>
         
      </ul>
     </div>
@@ -41,14 +41,14 @@
 </nav>
    
    <div id = "intro" class="container">
-  <p>Who cares why I crossed the road?</p>
+  <p>Quit foaling around!</p>
   <img class = "fix" src="talkhorse.png" alt="Animal Fam">
 </div>
 
 <div class="container">
   
   <div class="panel panel-default">
-    <div class="panel-body">Chicken Chat</div>
+    <div class="panel-body">Horse Chat</div>
   </div>
 </div>
 
