--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </nav>
    <div id = "intro" class="container">
   
-  <p>Welcome to Animal Fam, the place where animals will calm your worries.</p>
+  <p>Don’t cry over spilled milk. Turn the udder cheek and moo-ve on &hearts;</p>
   <img id = "homepic" src="tranfam.png" alt="Animal Fam">
 </div>
   
