--- a/about.html
+++ b/about.html
@@ -33,13 +33,14 @@
           <li><a  class = "active" href = "about.html">About</a></li> 
           <li><a href="cow.html">Cow Chat</a></li>
           <li><a href="chicken.html">Chicken Chat</a></li>
+          <li><a href="horse.html">Horse Chat</a></li>
         
      </ul>
     </div>
   </div>
 </nav>
    <div id = "intro" class="container">
-  <br>
+ 
   <p>Welcome to Animal Fam, the place where animals will calm your worries.</p>
   <img src="tranfam.png" alt="Animal Fam">
 </div>
