--- a/chicken.html
+++ b/chicken.html
@@ -34,6 +34,7 @@
           <li><a href="cow.html">Cow Chat</a></li>
           <li><a class = "active" href="chicken.html">Chicken Chat</a></li>
           <li><a href="horse.html">Horse Chat</a></li>
+          <li><a href="pig.html">Pig Chat</a></li>
      </ul>
     </div>
   </div>
