--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
           <li><a href="cow.html">Cow Chat</a></li>
           <li><a href="chicken.html">Chicken Chat</a></li>
           <li><a href="horse.html">Horse Chat</a></li>
+          <li><a href="pig.html">Pig Chat</a></li>
         
      </ul>
     </div>
@@ -41,13 +42,36 @@
 </nav>
    <div id = "intro" class="container">
  
-  <p>Welcome to Animal Fam, the place where animals will calm your worries.</p>
+  <h1>Welcome to Animal Fam, the place where animals will calm your worries.</h1>
+  
+  <p id = "label">What is it?</p>
+  <p id = "text">Animal Fam is an interactive website for users to rant their frustrations by chatting with a variety of animal characters. Each animal has their own personality, increasing the variety of chats that users want to have. All the animals have their own characterized chatbot, and we currently support Chicken, Cow, Pig, and Horse chat. When a user types a message and enters it into the animal’s respective chat, the animal will respond to the message with a pun.</p>
+
+  <p id = "label">Platform</p>
+  <p id = "text">The product is completely free and is accessible to all individuals through the website: <a>animalspam.com</a></p>
+
+
+  <p id = "label">Why is it important?</p>
+  <p id = "text">Throughout our daily lives, we are constantly facing frustrations. Sometimes we just don’t feel comfortable sharing our troubles with people around us, despite it being essential to our health. Animal Fam is a great and healthy way for us to alleviate stress. Animal Fam’s target audience are all individuals who wish to vent their frustrations or simplyrelax and have a short chat with unique and funny characters.</p>
+
+  <p id = "label">Future Goals</p>
+  <p id = "text">In the future, we want to add more characters and features to each animal chatbot. We also want to expand our audience by making an Animal Fam app.</p>
+
+  <p id = "label">Tools Used</p>
+  <p id = "text">Animal Fam was developed through the use of HTML, CSS, JavaScript, Bootstrap, LunaPic, and other various online design editing tools.</p>
+
+  <p id = "label">Creators</p>
+  <p id = "text">Esha Radhakrishnan, Kaitlyn Chan, Rochelle Tham, Donna Lai, Marinn Cedillo, Ashley Lin</p>
+
   <img src="tranfam.png" alt="Animal Fam">
 </div>
   
 </div>
   </body>
 </html>
+
+
+
 
 
   
