--- a/cow.html
+++ b/cow.html
@@ -32,6 +32,7 @@
           <li><a class = "active" href="cow.html">Cow Chat</a></li>
           <li><a href="chicken.html">Chicken Chat</a></li>
           <li><a  href="horse.html">Horse Chat</a></li>
+          <li><a href="pig.html">Pig Chat</a></li>
         
      </ul>
     </div>
@@ -39,7 +40,9 @@
 </nav>
    
 <div id = "intro" class="container">
+    <br>
   <p>You are so a-MOO-sing!</p>
+  <img class = "fix" src="talkcow.png" alt="Animal Fam">
  
 </div>
 
@@ -47,7 +50,7 @@
   
   <div class="panel panel-default">
     <div class="panel-body"> <strong>Cow Chat</strong></div>
-         <img class = "fix" src="talkcow.png" alt="Animal Fam">
+         
         <div id="messages"></div>
         <input type="text" id="nameInput" placeholder="Name">
         <input type="text" id="messageInput" placeholder="Message">
