--- a/pig.html
+++ b/pig.html
@@ -41,7 +41,7 @@
    
 <div id = "intro" class="container">
     <br>
-  <p>You are so a-MOO-sing!</p>
+  <p>I love bacon</p>
   <img class = "fix" src="talkpig.png" alt="Animal Fam">
  
 </div>
